automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "  'Area': 3194}]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,13 +376,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "city_count = len()\n",
+    "city_count = len(cities)\n",
     "city_count # 12"
    ]
   },
@@ -399,7 +410,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cities[11]['City'] = None\n",
+    "cities[11]['City'] = 'None'\n",
     "cities[11]['City'] # 'PyeongChang'"
    ]
   },
