--- a/index.ipynb
+++ b/index.ipynb
@@ -434,13 +434,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['PyeongChang', 'South Korea', 2581000, 3194]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pyeongchang_values = \n",
+    "pyeongchang_values = list(cities[-1].values())\n",
     "\n",
-    "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
+    "print(pyeongchang_values) # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
     "type(pyeongchang_values) # list"
    ]
   },
@@ -457,10 +475,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyeongchang_keys = None\n",
+    "pyeongchang_keys = list(cities[-1].keys())\n",
     "\n",
     "\n",
-    "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
+    "print(pyeongchang_keys) # ['City', 'Country', 'Population', 'Area']\n",
     "type(pyeongchang_keys) # list"
    ]
   },
